# satori

./: .gitignore  README.md  README_zh.md  characters.toml  docopt  main.py  pyproject.toml  requirements.txt  satori.py  setup.cfg
.github/workflows/: pylint.yml
satori_gensokyo/: satori.py
