[tool.poetry]
name = "satori"
version = "0.1.2"
description = "Gensokyo style spellcard fight generator"
authors = ["Ravenclaw-OIer <lilywhite2005@outlook.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.7.2"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
satori = 'satori:main'