[metadata]
name = satori-gensokyo
version = 0.1.0
author = Ravenclaw-OIer
author_email = yzshangs@126.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ravenclaw-OIer/satori
project_urls =
    Bug Tracker = https://github.com/Ravenclaw-OIer/satori/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
